--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -109,29 +109,40 @@ assistant .sidebar {
   color: @theme_fg_color;
   background-color: @theme_bg_color; }
 
-button:link > label, button:visited > label, *:link, button:link, button:visited {
+button:link > label, button:visited > label,
+*:link,
+button:link,
+button:visited {
   color: @link_color; }
-  button:link > label:visited, button:visited > label:visited, *:link:visited, button:visited {
+  button:link > label:visited, button:visited > label:visited,
+  *:link:visited,
+  button:visited {
     color: mix(@link_color, @theme_fg_color, 0.2); }
-    *:selected button:link > label:visited, *:selected button:visited > label:visited,
-    *:selected *:link:visited,
-    *:selected button:visited:link,
-    *:selected button:visited {
-      color: mix(@selected_fg_color, @selected_bg_color, 0.4); }
-  button:link > label:hover, button:visited > label:hover, *:link:hover, button:hover:link, button:hover:visited {
+    *:selected button:link > label:visited, *:selected button:visited > label:visited, *:selected
+    *:link:visited, *:selected
+    button:visited:link, *:selected
+    button:visited {
+      color: mix(@theme_selected_fg_color, @theme_selected_bg_color, 0.4); }
+  button:link > label:hover, button:visited > label:hover,
+  *:link:hover,
+  button:hover:link,
+  button:hover:visited {
     color: shade(@link_color, 1.1); }
-    *:selected button:link > label:hover, *:selected button:visited > label:hover,
-    *:selected *:link:hover,
-    *:selected button:hover:link,
-    *:selected button:hover:visited {
-      color: mix(@selected_fg_color, @selected_bg_color, 0.9); }
-  button:link > label:active, button:visited > label:active, *:link:active, button:active:link, button:active:visited {
+    *:selected button:link > label:hover, *:selected button:visited > label:hover, *:selected
+    *:link:hover, *:selected
+    button:hover:link, *:selected
+    button:hover:visited {
+      color: mix(@theme_selected_fg_color, @theme_selected_bg_color, 0.9); }
+  button:link > label:active, button:visited > label:active,
+  *:link:active,
+  button:active:link,
+  button:active:visited {
     color: @link_color; }
-    *:selected button:link > label:active, *:selected button:visited > label:active,
-    *:selected *:link:active,
-    *:selected button:active:link,
-    *:selected button:active:visited {
-      color: mix(@selected_fg_color, @selected_bg_color, 0.8); }
+    *:selected button:link > label:active, *:selected button:visited > label:active, *:selected
+    *:link:active, *:selected
+    button:active:link, *:selected
+    button:active:visited {
+      color: mix(@theme_selected_fg_color, @theme_selected_bg_color, 0.8); }
   button:link > label:backdrop:backdrop:hover, button:visited > label:backdrop:backdrop:hover, button:link > label:backdrop:backdrop:hover:selected, button:visited > label:backdrop:backdrop:hover:selected, button:link > label:backdrop, button:visited > label:backdrop,
   *:link:backdrop:backdrop:hover,
   button:backdrop:backdrop:hover:link,
@@ -142,15 +153,15 @@ button:link > label, button:visited > label, *:link, button:link, button:visited
   *:link:backdrop,
   button:backdrop:link,
   button:backdrop:visited {
-    color: @selected_bg_color; }
+    color: mix(@link_color, @theme_unfocused_selected_bg_color, 0.3); }
   button:link > label:selected, button:visited > label:selected, *:selected button:link > label, *:selected button:visited > label,
   *:link:selected,
   button:selected:link,
-  button:selected:visited,
-  *:selected *:link,
-  *:selected button:link,
-  *:selected button:visited {
-    color: mix(@selected_fg_color, @selected_bg_color, 0.8); }
+  button:selected:visited, *:selected
+  *:link, *:selected
+  button:link, *:selected
+  button:visited {
+    color: mix(@theme_selected_fg_color, @theme_selected_bg_color, 0.8); }
 
 button:link, button:visited {
   border-color: transparent;
@@ -1457,11 +1468,9 @@ filechooser placessidebar.sidebar row, filechooser placessidebar.sidebar view ro
     color: @sidebar_fg_color;
     background-color: mix(@sidebar_bg_color, @dark_shadow, 0.15); }
 
-.nautilus-window.csd.background,
-.nautilus-window placessidebar list {
+.nautilus-window.csd.background, .nautilus-window placessidebar list {
   background-color: @sidebar_bg_color; }
-  .nautilus-window.csd.background:backdrop,
-  .nautilus-window placessidebar list:backdrop {
+  .nautilus-window.csd.background:backdrop, .nautilus-window placessidebar list:backdrop {
     background-color: @sidebar_bg_color; }
 
 .nautilus-window placessidebar.sidebar row.sidebar-row {
@@ -1937,7 +1946,8 @@ treeview {
   color: @theme_text_color;
   background-color: @theme_base_color; }
   .view:not(treeview) {
-    border-radius: 0px; }
+    border-radius: 0px;
+    -gtk-outline-radius: 0px; }
   .view:disabled {
     color: @theme_disabled_fg_color;
     background-color: @theme_disabled_bg_color; }
@@ -2011,10 +2021,12 @@ searchbar {
   .osd button:hover, button.osd:hover {
     border-color: shade(@osd_bg, 0.7);
     background-color: shade(@osd_bg, 1.1);
+    background-image: none;
     color: @osd_fg; }
   .osd button:active, .osd button:checked, button.osd:active, button.osd:checked {
     border-color: shade(@osd_bg, 0.8);
     background-color: shade(@osd_bg, 0.95);
+    background-image: none;
     color: @osd_fg; }
   .osd button:disabled, button.osd:disabled {
     border-color: shade(@osd_bg, 0.85);
@@ -2032,7 +2044,7 @@ searchbar {
   border-color: shade(@osd_bg, 0.8);
   background-color: @osd_bg;
   color: @osd_fg; }
-  .osd toolbar button, toolbar.osd button {
+  .osd toolbar button, .osd toolbar button.flat, toolbar.osd button, toolbar.osd button.flat {
     padding: 2px 4px;
     border-width: 1px;
     border-style: solid;
@@ -2041,19 +2053,20 @@ searchbar {
     background-image: none;
     background-color: shade(@osd_bg, 1.08);
     color: @osd_fg; }
-    .osd toolbar button:hover, toolbar.osd button:hover {
+    .osd toolbar button:hover, .osd toolbar button.flat:hover, toolbar.osd button:hover, toolbar.osd button.flat:hover {
       border-color: shade(@osd_bg, 0.7);
       background-color: shade(@osd_bg, 1.1);
+      background-image: none;
       color: @osd_fg; }
-    .osd toolbar button:active, .osd toolbar button:checked, toolbar.osd button:active, toolbar.osd button:checked {
+    .osd toolbar button:active, .osd toolbar button:checked, .osd toolbar button.flat:active, .osd toolbar button.flat:checked, toolbar.osd button:active, toolbar.osd button:checked, toolbar.osd button.flat:active, toolbar.osd button.flat:checked {
       border-color: shade(@osd_bg, 0.8);
       background-color: shade(@osd_bg, 0.95);
       color: @osd_fg; }
-    .osd toolbar button:disabled, toolbar.osd button:disabled {
+    .osd toolbar button:disabled, .osd toolbar button.flat:disabled, toolbar.osd button:disabled, toolbar.osd button.flat:disabled {
       border-color: shade(@osd_bg, 0.85);
       background-color: shade(@osd_bg, 0.9);
       color: alpha(@osd_fg, 0.8); }
-    .osd toolbar button:checked:disabled, toolbar.osd button:checked:disabled {
+    .osd toolbar button:checked:disabled, .osd toolbar button.flat:checked:disabled, toolbar.osd button:checked:disabled, toolbar.osd button.flat:checked:disabled {
       border-color: shade(@osd_bg, 0.75);
       background-color: shade(@osd_bg, 0.8); }
   .osd toolbar separator, toolbar.osd separator {
@@ -2226,7 +2239,8 @@ messagedialog {
   messagedialog.csd .dialog-action-area button {
     padding: 10px;
     border-radius: 0;
-    border-bottom-style: none; }
+    border-bottom-style: none;
+    background-image: none; }
     messagedialog.csd .dialog-action-area button:last-child {
       border-right-width: 0;
       border-radius: 0px;
