--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -1314,6 +1314,16 @@ scale {
     scale slider:backdrop {
       color: #FFFFFF;
       background-image: url("assets/slider-horiz-insensitive.png"); }
+  scale.horizontal.marks-before slider {
+    background-image: url("assets/slider-horiz-top.png"); }
+    scale.horizontal.marks-before slider:hover {
+      background-image: url("assets/slider-horiz-top.png"); }
+    scale.horizontal.marks-before slider:disabled {
+      background-image: url("assets/slider-horiz-top-insensitive.png"); }
+      scale.horizontal.marks-before slider:disabled:backdrop {
+        background-image: url("assets/slider-horiz-top-insensitive.png"); }
+    scale.horizontal.marks-before slider:backdrop {
+      background-image: url("assets/slider-horiz-top-insensitive.png"); }
   scale.vertical slider {
     min-height: 15px;
     min-width: 21px;
@@ -1328,6 +1338,16 @@ scale {
         background-image: url("assets/slider-vert-insensitive.png"); }
     scale.vertical slider:backdrop {
       background-image: url("assets/slider-vert-insensitive.png"); }
+  scale.vertical.marks-before {
+    background-image: url("assets/slider-vert-left.png"); }
+    scale.vertical.marks-before:hover {
+      background-image: url("assets/slider-vert-left.png"); }
+    scale.vertical.marks-before:disabled {
+      background-image: url("assets/slider-vert-left-insensitive.png"); }
+      scale.vertical.marks-before:disabled:backdrop {
+        background-image: url("assets/slider-vert-left-insensitive.png"); }
+    scale.vertical.marks-before:backdrop {
+      background-image: url("assets/slider-vert-left-insensitive.png"); }
   scale value {
     color: alpha(currentColor, 0.35); }
   scale marks {
@@ -2226,10 +2246,10 @@ headerbar.selection-mode, toolbar.selection-mode {
 decoration {
   border-radius: 0px 0px 0 0;
   border-width: 0px;
-  box-shadow: 0 3px 9px 1px alpha(black, 0.3), 0 0 0 1px alpha(black, 0.25);
+  box-shadow: 0 3px 9px 1px alpha(#000000, 0.3), 0 0 0 1px alpha(#000000, 0.25);
   margin: 10px; }
   decoration:backdrop {
-    box-shadow: 0 3px 9px 1px transparent, 0 2px 6px 2px alpha(black, 0.2), 0 0 0 1px alpha(black, 0.25); }
+    box-shadow: 0 3px 9px 1px transparent, 0 2px 6px 2px alpha(#000000, 0.2), 0 0 0 1px alpha(#000000, 0.25); }
   .fullscreen decoration, .tiled decoration {
     border-radius: 0; }
   .popup decoration {
@@ -2237,7 +2257,7 @@ decoration {
     border-radius: 0px; }
   .ssd decoration {
     border-radius: 0px 0px 0 0;
-    box-shadow: 0 0 0 1px alpha(black, 0.1); }
+    box-shadow: 0 0 0 1px alpha(#000000, 0.1); }
     .ssd decoration.maximized {
       border-radius: 0; }
   tooltip.csd decoration {
@@ -2625,12 +2645,12 @@ UnityPanelWidget, .unity-panel {
 read if you used those and something break with a version upgrade you're on your own... */
 @define-color wm_title shade(#000000, 1.8);
 @define-color wm_unfocused_title #000000;
-@define-color wm_highlight white;
+@define-color wm_highlight #000000;
 @define-color wm_borders_edge #000000;
 @define-color wm_bg_a shade(#D3D0C7, 1.2);
 @define-color wm_bg_b #D3D0C7;
-@define-color wm_shadow alpha(white, 0.35);
-@define-color wm_border alpha(white, 0.18);
+@define-color wm_shadow alpha(#000000, 0.35);
+@define-color wm_border alpha(#000000, 0.18);
 @define-color wm_button_hover_color_a shade(#D3D0C7, 1.3);
 @define-color wm_button_hover_color_b #D3D0C7;
 @define-color wm_button_active_color_a shade(#D3D0C7, 0.85);
