--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -1834,6 +1834,9 @@ treeview {
   treeview.view:selected, treeview.view:selected:focus {
     color: #FFFFFF;
     background-color: #000082; }
+    treeview.view:selected:backdrop, treeview.view:selected:focus:backdrop {
+      color: #FFFFFF;
+      background-color: #000082; }
   treeview.view:drop(active) {
     border-style: solid none;
     border-width: 1px;
@@ -1867,6 +1870,9 @@ treeview {
 .view {
   color: #000000;
   background-color: #FFFFFF; }
+  .view:backdrop {
+    color: #000000;
+    background-color: #FFFFFF; }
   .view:not(treeview) {
     border-radius: 0px;
     -gtk-outline-radius: 0px; }
