--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -672,7 +672,7 @@ image {
   border-style: solid;
   border-color: #000000;
   border-radius: 0px;
-  background-color: #C0C0C0;
+  background-color: #FFFFBF;
   color: #000000; }
   .floating-bar.top {
     border-top-width: 0px;
@@ -1239,8 +1239,8 @@ scale {
     margin-right: -13px; }
   scale slider {
     min-height: 21px;
-    min-width: 15px;
-    margin: -6px;
+    min-width: 11px;
+    margin-top: -6px;
     margin-bottom: -10px;
     border: none;
     border-radius: 0;
@@ -1270,9 +1270,10 @@ scale {
     scale.horizontal.marks-before slider:backdrop {
       background-image: url("assets/slider-horiz-top-insensitive.png"); }
   scale.vertical slider {
-    min-height: 15px;
+    min-height: 11px;
     min-width: 21px;
-    margin: -5px;
+    margin: 0;
+    margin-left: -6px;
     margin-right: -10px;
     background-image: url("assets/slider-vert.png"); }
     scale.vertical slider:hover {
@@ -1420,10 +1421,10 @@ separator {
     border-color: mix(shade(#C0C0C0, 0.65), #C0C0C0, 0.5); }
     .titlebutton button separator:backdrop, .titlebutton separator.titlebutton:backdrop {
       border-color: shade(#C0C0C0, 0.65); }
-  menuitem separator {
-    border-width: 1px;
-    border-style: none;
-    color: mix(shade(#C0C0C0, 0.65), #C0C0C0, 0.5); }
+  menu separator {
+    min-height: 2px;
+    background-color: shade(#C0C0C0, 0.65);
+    background-image: linear-gradient(to bottom, shade(#C0C0C0, 0.65) 50%, white 50%); }
   popover separator {
     border: 0;
     color: alpha(currentColor, 0.5);
@@ -2196,35 +2197,35 @@ headerbar.selection-mode, toolbar.selection-mode {
     headerbar.selection-mode .selection-menu button .dim-label, toolbar.selection-mode .selection-menu button .dim-label {
       color: shade(#000080, 0.7); }
 
-window decoration {
+decoration {
   background-color: #C0C0C0;
   border-radius: 0px 0px 0 0;
   border-style: solid;
   padding: 2px;
   box-shadow: inset -2px -2px shade(#C0C0C0, 0.85), inset 2px 2px mix(#C0C0C0, white, 0.55), inset -1px -1px #000000, inset 1px 1px mix(#C0C0C0, white, 0.7); }
-  .fullscreen window decoration, .tiled window decoration {
+  .fullscreen decoration, .tiled decoration {
     border-radius: 0;
     border: 0px;
     margin: 0px; }
-
-.popup decoration {
-  box-shadow: none;
-  border-radius: 0px;
-  border: none;
-  padding: 0; }
-.ssd decoration {
-  border-radius: 0px 0px 0 0; }
-  .ssd decoration.maximized {
-    border-radius: 0;
+  .popup decoration {
+    box-shadow: none;
+    border-radius: 0px;
+    border: none;
     padding: 0; }
-tooltip.csd decoration {
-  border-radius: 0px;
-  box-shadow: none; }
-.solid-csd decoration {
-  margin: 1px;
-  border-radius: 0px;
-  background-color: alpha(white, 0.95);
-  box-shadow: none; }
+  .ssd decoration {
+    border-radius: 0px 0px 0 0; }
+    .ssd decoration.maximized {
+      border-radius: 0;
+      padding: 0; }
+  tooltip.csd decoration {
+    border-radius: 0px;
+    box-shadow: none;
+    padding: 0; }
+  .solid-csd decoration {
+    margin: 1px;
+    border-radius: 0px;
+    background-color: alpha(white, 0.95);
+    box-shadow: none; }
 
 messagedialog {
   border-bottom-left-radius: 0px;
