--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -1912,6 +1912,12 @@ filechooser .sidebar, .nautilus-window .sidebar, .nemo-window .sidebar {
     .caja-navigation-window .caja-side-pane .expander:hover {
       color: #000080; }
 
+stacksidebar.sidebar:dir(ltr) list, stacksidebar.sidebar.left list, stacksidebar.sidebar.left:dir(rtl) list {
+  border-right: 1px solid #000000;
+  border-left-style: none; }
+stacksidebar.sidebar:dir(rtl) list, stacksidebar.sidebar.right list {
+  border-left: 1px solid #000000;
+  border-right-style: none; }
 stacksidebar row {
   padding: 10px 4px; }
   stacksidebar row > label {
