--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -1780,6 +1780,7 @@ textview {
 treeview {
   -treeview-vertical-separator: 0; }
   treeview.view:selected, treeview.view:selected:focus {
+    border-radius: 0;
     color: #FFFFFF;
     background-color: #000080; }
     treeview.view:selected:backdrop, treeview.view:selected:focus:backdrop {
@@ -1821,15 +1822,14 @@ treeview {
   .view:backdrop {
     color: #000000;
     background-color: #FFFFFF; }
-  .view:not(treeview) {
-    border-radius: 0px;
-    -gtk-outline-radius: 0px; }
   .view:disabled {
     color: mix(#000000, #C0C0C0, 0.5);
     background-color: mix(#000000, #C0C0C0, 0.95); }
   .view:selected, .view:selected:focus, .view text:selected, .view text:selected:focus, .view text selection, .view text selection:focus {
     color: #FFFFFF;
-    background-color: #000080; }
+    background-color: #000080;
+    border-radius: 0px;
+    -gtk-outline-radius: 0px; }
     .view:selected:disabled, .view:selected:focus:disabled, .view text:selected:disabled, .view text:selected:focus:disabled, .view text selection:disabled, .view text selection:focus:disabled {
       color: mix(#FFFFFF, mix(#000000, #C0C0C0, 0.5), 0.5);
       background-color: #000080; }
@@ -1902,12 +1902,12 @@ placessidebar row {
     padding-left: 2px; }
   placessidebar row.sidebar-new-bookmark-row {
     color: #000080; }
-    placessidebar row.sidebar-new-bookmark-row:drop(active):not(:disabled) {
-      color: #000080;
-      box-shadow: inset 0 1px #000080, inset 0 -1px #000080; }
-      placessidebar row.sidebar-new-bookmark-row:drop(active):not(:disabled):selected {
-        color: #FFFFFF;
-        background-color: #000080; }
+  placessidebar row:drop(active):not(:disabled) {
+    color: #000080;
+    box-shadow: inset 0 1px #000080, inset 0 -1px #000080; }
+    placessidebar row:drop(active):not(:disabled):selected {
+      color: #FFFFFF;
+      background-color: #000080; }
 
 button.sidebar-button, button.sidebar-button:backdrop {
   min-width: 22px;
