--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -2144,9 +2144,10 @@ decoration {
   .maximized decoration, .fullscreen decoration, .tiled decoration, .tiled-top decoration, .tiled-right decoration, .tiled-bottom decoration, .tiled-left decoration {
     border-radius: 0; }
   .popup decoration {
-    box-shadow: none;
+    box-shadow: none; }
+  .csd.popup decoration {
     border-radius: 0px;
-    border: none;
+    box-shadow: none;
     padding: 0; }
   .ssd decoration {
     border-radius: 0px 0px 0 0; }
