--- a/cinnamon/cinnamon.css
+++ b/cinnamon/cinnamon.css
@@ -1,6 +1,6 @@
 /* ###################################################################
  * Section common with Gnome Shell
- * ... contains a few cinnamon specific styles (rare occurences) 
+ * ... contains a few cinnamon specific styles (rare occurences)
  * ###################################################################*/
 stage {
     font-family: Noto Sans, sans-serif;
@@ -61,12 +61,12 @@ StScrollBar StButton#vhandle:hover {
     background-color: #c0c0c0;
     color: #000;
     font-size: 8.5pt;
-    font-weight: normal;    
+    font-weight: normal;
     text-align: center;
 }
 
 /* ===================================================================
- * Shared button properties 
+ * Shared button properties
  * ===================================================================*/
 
 .notification-button, .notification-icon-button,
@@ -75,7 +75,7 @@ StScrollBar StButton#vhandle:hover {
     color: black;
     border-image: url('caption.png') 10 12 10 12;
     font-size: 8.5pt;
-    font-weight: normal;    
+    font-weight: normal;
     text-align: center;
 }
 
@@ -100,7 +100,7 @@ StScrollBar StButton#vhandle:hover {
 }
 
 /* ===================================================================
- * PopupMenu (popupMenu.js) 
+ * PopupMenu (popupMenu.js)
  * ===================================================================*/
 
 .popup-menu-boxpointer {
@@ -274,19 +274,19 @@ StScrollBar StButton#vhandle:hover {
 #panelLeft:dnd {
     background-gradient-direction: vertical;
     background-gradient-start: rgba(255,0,0,1);
-    background-gradient-end: rgba(255,0,0,1);        
+    background-gradient-end: rgba(255,0,0,1);
 }
 
 #panelCenter:dnd {
     background-gradient-direction: vertical;
     background-gradient-start: rgba(0,255,0,1);
-    background-gradient-end: rgba(0,255,0,1);        
+    background-gradient-end: rgba(0,255,0,1);
 }
 
 #panelRight:dnd {
     background-gradient-direction: vertical;
     background-gradient-start: rgba(0,0,255,1);
-    background-gradient-end: rgba(0,0,255,1);        
+    background-gradient-end: rgba(0,0,255,1);
 }
 
 #panelLeft:ltr {
@@ -319,7 +319,7 @@ StScrollBar StButton#vhandle:hover {
 -minimum-hpadding: 5px;
 font-weight: bold;
 border: 1px solid transparent;
-transition-duration: 150; 
+transition-duration: 150;
 }
 
 .panel-status-button:hover,
@@ -339,7 +339,7 @@ transition-duration: 150;
 
 .system-status-icon {
     padding-left: 0px;
-    padding-right: 0px;    
+    padding-right: 0px;
     spacing: 0px;
     margin: 0px;
 }
@@ -397,7 +397,7 @@ transition-duration: 150;
 }
 
 /* ===================================================================
- * Overview 
+ * Overview
  * ===================================================================*/
 
 #overview {
@@ -453,7 +453,7 @@ transition-duration: 150;
     transition-duration: 300;
 }
 
-.workspace-add-button:hover {  
+.workspace-add-button:hover {
     background-image: url("add-workspace.png");
     transition-duration: 300;
 }
@@ -542,13 +542,13 @@ transition-duration: 150;
   border: 4px, #399cee;
   background-color: #399cee;
   border-image: url('scrollthrough.png') 10 12 10 12;
-} 
+}
 
 /* ===================================================================
 * Desklets (desklet.js)
 * ===================================================================*/
-.desklet {        
-color: #eee;  
+.desklet {
+color: #eee;
 }
 
 .desklet-with-borders {
@@ -558,7 +558,7 @@ border: 1px solid #444;
           border-right: 0px;
     background-color: #232323;
     border-radius: 0px;
-color: #eee;  
+color: #eee;
 }
 
 .desklet-with-borders-and-header {
@@ -567,31 +567,31 @@ border: 1px solid #444;
           border-left: 0px;
           border-right: 0px;
     background-color: #232323;
-color: #eee;   
+color: #eee;
     border-radius-bottomleft: 0px;
     border-radius-bottomright: 0px;
 }
 
-.desklet-header { 
+.desklet-header {
     border-radius-topleft: 0px;
     border-radius-topright: 0px;
     font-size: 10.5pt;
- 
+
 border: 1px solid #444;
       border-bottom: 0px;
           border-left: 0px;
           border-right: 0px;
     background-color: #232323;
     border-radius: 0px;
-color: #eee;  
+color: #eee;
     padding: 6px;
 }
 
-.desklet-drag-placeholder { 
+.desklet-drag-placeholder {
     background-color: rgba(57,156,238,.31);
 }
 
- 
+
 .clock-desklet-label {
 }
 
@@ -603,7 +603,7 @@ border: 1px solid #444;
           border-right: 0px;
     background-color: #232323;
     border-radius: 0px;
- 
+
 }
 .xkcd-box {
 padding: 0px;
@@ -613,14 +613,14 @@ border-radius: 0px;
 }
 
 /* ===================================================================
- * Clock Desklet (desklet.js) 
+ * Clock Desklet (desklet.js)
  * ===================================================================*/
 .clock-desklet-label {
-} 
+}
 
 
 /* ===================================================================
- * Looking Glass 
+ * Looking Glass
  * ===================================================================*/
 
 #LookingGlassDialog {
@@ -720,7 +720,7 @@ border-radius: 0px;
 }
 
 /* ===================================================================
- * Date applet 
+ * Date applet
  * ===================================================================*/
 
 .calendar {
@@ -845,7 +845,7 @@ border-radius: 0px;
  * ===================================================================*/
 
 #notification {
- 
+
     border-radius: 0px;
     font-size: 8.5pt;
     background-color: #c0c0c0;
@@ -1020,7 +1020,7 @@ border-radius: 0px;
     background-gradient-direction: vertical;
     background-gradient-start: #c0c0c0;
     background-gradient-end: #c0c0c0;
-    border: 1px solid  #399cee;    
+    border: 1px solid  #399cee;
     border-radius: 0px;
     width: 60px;
     border-bottom: 0px;
@@ -1036,7 +1036,7 @@ border-radius: 0px;
 
 .switcher-list .item-box:outlined {
         color: #000;
-        background-color: #399cee;    
+        background-color: #399cee;
         border-radius: 0px;
 }
 
@@ -1168,13 +1168,13 @@ border-radius: 0px;
     width: 18em;
 }
 
-.run-dialog-completion-box { 
+.run-dialog-completion-box {
     padding-left: 15px;
     font-size: 10px;
-} 
+}
 
 .run-dialog {
-    border-radius: 8px;    
+    border-radius: 8px;
     padding-right: 21px;
     padding-left: 21px;
     padding-bottom: 15px;
@@ -1443,7 +1443,7 @@ border-radius: 0px;
         background-gradient-direction: vertical;
           background-gradient-start: #000;
           background-gradient-end: #000;
- 
+
 }
 
 .keyboard-layout {
@@ -1490,7 +1490,7 @@ border-radius: 1px;
     border: 1px #76d2ec;
     border-bottom: 0px;
     border-left: 0px;
-    border-right: 0px; 
+    border-right: 0px;
     border-radius: 1px;
     color: #000;
 }
@@ -1502,7 +1502,7 @@ border-radius: 1px;
     border: 1px #76d2ec;
     border-bottom: 0px;
     border-left: 0px;
-    border-right: 0px; 
+    border-right: 0px;
     border-radius: 1px;
     color: #000;
 }
@@ -1520,7 +1520,7 @@ border-radius: 1px;
 }
 
 /* ###################################################################
- * Cinnamon Specific Section 
+ * Cinnamon Specific Section
  * ###################################################################*/
 
 /* ===================================================================
@@ -1569,7 +1569,7 @@ border-radius: 1px;
     padding-bottom: 5px;
 }
 .menu-applications-box {
-    padding: 4px;  
+    padding: 4px;
 }
 .menu-application-button {
     padding: 5px;
@@ -1583,11 +1583,11 @@ border-radius: 1px;
     border: 1px solid rgba(0,0,0,0.35);
     border-radius: 1px;
 }
-.menu-application-button-label:ltr { 
-    padding-left: 1px        
+.menu-application-button-label:ltr {
+    padding-left: 1px
 }
-.menu-application-button-label:rtl { 
-    padding-right: 5px        
+.menu-application-button-label:rtl {
+    padding-right: 5px
 }
 .menu-category-button {
     padding: 7px;
@@ -1656,7 +1656,7 @@ border-radius: 1px;
  * Window list (windowList.js)
  * ===================================================================*/
 .window-list-box {
-    spacing: 4px;  
+    spacing: 4px;
 }
 
 .window-list-item-label {
@@ -1665,29 +1665,105 @@ border-radius: 1px;
     min-width: 5px;
 }
 
-.window-list-item-box,
-.window-list-item-box:hover {
+.window-list-item-box {
     border-image: url('border-panelbutton.png') 10 12 10 12;
     padding: 1px;
-    /*margin: 5px;*/
     transition-duration: 100;
 }
 
-.window-list-item-box:active,
-.window-list-item-box:checked,
-.window-list-item-box:focus    { 
-    border-image: url('border-panelbutton-active.png') 10 12 10 12;
+ .window-list-item-box:hover {
+    /*border-image: url('border-panelbutton-hover.png') 10 12 10 12;*/
 }
 
-/*.window-list-item-box:hover
-  {  
-    border-image: url('border-panelbutton-hover.png') 10 12 10 12;
-}*/
+.window-list-item-box:focus,
+.window-list-item-box:active,
+.window-list-item-box:checked {
+    border-image: url('border-panelbutton-active.png') 10 12 10 12;
+}
 
 .window-list-item-demands-attention {
     border-image: url('border-panelbutton-hover.png') 10 12 10 12;
 }
 
+/* experimental support for grouped window list */
+.grouped-window-list-item-box {
+  color: #ffffff;
+  font-weight: normal;
+  border-image: none;
+  transition-duration: 100;
+}
+
+.grouped-window-list-item-box:hover {
+  /*border-image: url('border-panelbutton-hover.png') 10 12 10 12;*/
+}
+
+.grouped-window-list-item-box:active,
+.grouped-window-list-item-box:checked {
+  border-image: url('border-panelbutton.png') 10 12 10 12;
+}
+
+.grouped-window-list-item-box:active:hover,
+.grouped-window-list-item-box:checked:hover {
+  /*border-image: url('border-panelbutton-hover.png') 10 12 10 12;*/
+}
+
+.grouped-window-list-item-box:focus {
+  border-image: url('border-panelbutton-active.png') 10 12 10 12;
+}
+
+.grouped-window-list-item-box:focus:hover {
+  /*border-image: url('border-panelbutton-hover.png') 10 12 10 12;*/
+}
+
+.grouped-window-list-item-demands-attention {
+  font-weight: normal;
+  border-image: url('border-panelbutton-hover.png') 10 12 10 12;
+}
+
+/*.grouped-window-list-item-attention:hover {
+  border-image: url("urgent.png") 4;
+}*/
+
+.window-list-item-box .progress,
+.grouped-window-list-item-box .progress {
+  background-color: #1c40a8;
+  transition-duration: 100;
+}
+
+.window-list-preview {
+  spacing: 6px;
+  color: #000000;
+  border-image: url('caption.png') 8 8 8 8;
+  border-radius: 0;
+  padding: 6px 12px 12px 12px;
+  font-size: 1em;
+}
+
+.grouped-window-list-thumbnail-menu {
+  spacing: 6px;
+  padding: 6px 12px 12px 12px;
+}
+
+.grouped-window-list-thumbnail-menu > StBoxLayout {
+  padding: 4px;
+}
+
+.grouped-window-list-thumbnail-menu .item-box {
+  padding: 10px;
+  border-radius: 0;
+  spacing: 4px;
+}
+
+.grouped-window-list-thumbnail-menu .item-box:outlined {
+  padding: 8px;
+  border: 1px solid #1c40a8;
+}
+
+.grouped-window-list-thumbnail-menu .item-box:selected {
+  color: #ffffff;
+  background-color: #1c40a8;
+  border: none;
+}
 /* ===================================================================
  * Sound Applet (status/volume.js)
  * ===================================================================*/
@@ -1705,7 +1781,7 @@ border-radius: 1px;
       width: 26px;
       height: 20px;
     padding: 5px;
-    color: #000;    
+    color: #000;
     background-color: #000;
 }
 
@@ -1765,7 +1841,7 @@ padding-bottom: 10px;
     spacing: 2px;
     padding: 2px;
 }
- 
+
 .workspace-button {
        width: 20px;
     height: 10px;
@@ -1795,7 +1871,7 @@ padding-bottom: 10px;
  * ===================================================================*/
 
 #panel-launchers-box {
-    
+
 }
 
 .panel-launcher {
@@ -1869,12 +1945,12 @@ padding-bottom: 10px;
     background-image: url("overview.png");
 }
 
-#overview-corner:hover {    
+#overview-corner:hover {
     background-image:  url("overview-hover.png");
 }
 
 /* ===================================================================
- * Applets (applet.js) 
+ * Applets (applet.js)
  * ===================================================================*/
 .applet-separator {
     padding: 5px 4px;
@@ -1905,7 +1981,7 @@ padding-bottom: 10px;
        background-color: transparent;
     color:  white;
     transition-duration: 100;
- 
+
 }
 
 .applet-label {
@@ -1931,7 +2007,7 @@ padding-bottom: 10px;
 
 .workspace-osd {
     color: #000;
-    font-size: 25pt;    
+    font-size: 25pt;
     text-align: center;
     background: #c0c0c0;
     background-gradient-direction: vertical;
@@ -1955,8 +2031,8 @@ padding-bottom: 10px;
     selected-color: white;
     caret-color: black;
     caret-size: 1px;
-    height: 16px;    
-    text-align: center;    
+    height: 16px;
+    text-align: center;
 }
 
 .expo-workspaces-name-entry#selected {
@@ -1965,7 +2041,7 @@ padding-bottom: 10px;
     padding: 5px;
     padding-bottom: 10px;
     border: 1px solid #399cee;
-    text-align: center;    
+    text-align: center;
     height: 16px;
 }
 
@@ -1974,7 +2050,7 @@ padding-bottom: 10px;
     padding-bottom: 10px;
     color: black;
     transition-duration: 300;
-    text-align: center;    
+    text-align: center;
 }
 
 /* ===================================================================
@@ -2056,7 +2132,7 @@ padding-bottom: 10px;
 /* ===================================================================
  * Network Data Usage Monitor applet
  * ===================================================================*/
- 
+
  /* These settings govern the width of the Applet and the space taken by the font.*/
 
 .numa-left {
@@ -2073,7 +2149,7 @@ padding-bottom: 10px;
     /*font-size: 95%;*/
 }
 
-/* The following are the styles for the Applet backgrounds - names are self explanitory 
+/* The following are the styles for the Applet backgrounds - names are self explanitory
 The colour parameters are red, green, blue, and transparency or a name */
 
 .numa-not-connected {
@@ -2120,7 +2196,7 @@ The colour parameters are red, green, blue, and transparency or a name */
     padding-left: 20px;
     padding-bottom: 20px;
     padding-top: 20px;
-    text-align: center;    
+    text-align: center;
 }
 
 
