--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -2315,8 +2315,6 @@ panel-toplevel.background na-tray-applet {
 .mate-panel-menu-bar {
   color: #000000;
   background-color: #C0C0C0; }
-  .mate-panel-menu-bar button, .mate-panel-menu-bar button.flat {
-    background-color: transparent; }
   .mate-panel-menu-bar, .mate-panel-menu-bar .menubar {
     background-color: #C0C0C0; }
   .mate-panel-menu-bar menubar, .mate-panel-menu-bar menubar menuitem, .mate-panel-menu-bar togglebutton {
@@ -2333,26 +2331,28 @@ panel-toplevel.background na-tray-applet {
     font-style: normal; }
     .mate-panel-menu-bar GtkMenu .label:disabled {
       color: mix(#000000, #C0C0C0, 0.5); }
-  .mate-panel-menu-bar .button:not(#tasklist-button) {
+  .mate-panel-menu-bar button, .mate-panel-menu-bar button.flat {
+    background-color: transparent; }
+  .mate-panel-menu-bar > .button:not(#tasklist-button) {
     border-color: transparent;
     border-radius: 0px;
     color: #000000;
     box-shadow: none;
     background-color: transparent; }
-    .mate-panel-menu-bar .button:not(#tasklist-button):hover {
+    .mate-panel-menu-bar > .button:not(#tasklist-button):hover {
       color: #000000;
       border-color: #000000;
       background-color: #C0C0C0;
       border-top-color: mix(#C0C0C0, white, 0.7);
       border-left-color: mix(#C0C0C0, white, 0.7);
       box-shadow: inset -1px 0 shade(#C0C0C0, 0.65), inset 0 -1px shade(#C0C0C0, 0.65), inset 1px 0 mix(#C0C0C0, white, 0.7), inset 0 1px mix(#C0C0C0, white, 0.7); }
-    .mate-panel-menu-bar .button:not(#tasklist-button):active, .mate-panel-menu-bar .button:not(#tasklist-button):checked {
+    .mate-panel-menu-bar > .button:not(#tasklist-button):active, .mate-panel-menu-bar > .button:not(#tasklist-button):checked {
       color: #000000;
       border-color: #000000;
       background-color: #C0C0C0;
       background-image: none;
       box-shadow: inset 1px 0 shade(#C0C0C0, 0.65), inset 0 1px shade(#C0C0C0, 0.65), inset -1px 0 mix(#C0C0C0, white, 0.7), inset 0 -1px mix(#C0C0C0, white, 0.7); }
-    .mate-panel-menu-bar .button:not(#tasklist-button):disabled {
+    .mate-panel-menu-bar > .button:not(#tasklist-button):disabled {
       border-color: transparent;
       color: alpha(#000000, 0.8);
       background-color: transparent; }
@@ -2473,7 +2473,7 @@ panel-toplevel.background na-tray-applet {
   color: #000000;
   border-radius: 0px;
   border: none; }
-  #XfceNotifyWindow.osd label#summary {
+  #XfceNotifyWindow.osd label #summary {
     font-weight: bold; }
   #XfceNotifyWindow.osd button {
     padding: 4px 8px;
