--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -2504,6 +2504,11 @@ panel-toplevel.background na-tray-applet {
     #XfceNotifyWindow.osd button:disabled {
       color: #303030; }
 
+wnck-pager:hover {
+  background-color: #000080; }
+wnck-pager:selected {
+  background-color: #07076a; }
+
 .nemo-window .nemo-window-pane widget.entry {
   border: 1px solid;
   border-radius: 3px;
