--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -2320,7 +2320,8 @@ panel-toplevel.background na-tray-applet {
     background-color: #C0C0C0; }
   .mate-panel-menu-bar menubar, .mate-panel-menu-bar menubar menuitem, .mate-panel-menu-bar togglebutton {
     border-color: transparent;
-    background-color: transparent; }
+    background-color: transparent;
+    background-image: none; }
   .mate-panel-menu-bar menubar menuitem:hover, .mate-panel-menu-bar menubar menuitem:active {
     color: #FFFFFF;
     background-color: #000080; }
