Finish Xfce wnck support, reduce scope of mate tasklist fix

--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -2505,10 +2505,12 @@ panel-toplevel.background na-tray-applet {
     #XfceNotifyWindow.osd button:disabled {
       color: #303030; }
 
-wnck-pager:hover {
-  background-color: #000080; }
-wnck-pager:selected {
-  background-color: #07076a; }
+wnck-pager {
+  background-color: #C0C0C0; }
+  wnck-pager:hover {
+    background-color: #000080; }
+  wnck-pager:selected {
+    background-color: #07076a; }
 
 .nemo-window .nemo-window-pane widget.entry {
   border: 1px solid;
