--- a/cinnamon/cinnamon.css
+++ b/cinnamon/cinnamon.css
@@ -1678,7 +1678,7 @@ height of the table to be ICON_SIZE + IMAGE_SIZE + spacing-rows = 24 + 125 + 10 
 
 /* experimental support for grouped window list */
 .grouped-window-list-item-box {
-  color: #ffffff;
+  color: #000000;
   font-weight: normal;
   border-image: none;
   transition-duration: 100;
