Update button(s) and calendar widgets

--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -1838,7 +1838,6 @@ columnview row:not(:selected) cell editablelabel.editing text selection {
     border: none; }
 
 calendar {
-  padding: 2px;
   border-width: 1px;
   border-radius: 0px;
   border-style: solid;
@@ -1846,17 +1845,32 @@ calendar {
   color: #000000; }
   calendar.header {
     border: none;
-    color: #000080; }
+    border-bottom: 1px solid black;
+    color: #000000; }
   calendar.button {
-    color: #000080; }
+    color: rgba(0, 0, 0, 0.45); }
+    calendar.button:hover {
+      color: #000000; }
+    calendar.button:backdrop {
+      color: rgba(0, 0, 0, 0.45); }
+    calendar.button:disabled {
+      color: rgba(96, 96, 96, 0.45); }
   calendar:selected {
-    border-radius: 0;
+    border-radius: 1px;
     color: #FFFFFF;
     background-color: #000080; }
+    calendar:selected:backdrop {
+      color: #FFFFFF;
+      background-color: #000080; }
   calendar:indeterminate {
-    color: alpha(currentColor, 0.55); }
+    color: alpha(currentColor, 0.1); }
   calendar.highlight {
-    color: #000080; }
+    color: #606060; }
+    calendar.highlight:backdrop {
+      color: #606060; }
+  calendar:backdrop {
+    color: #000000;
+    border-color: #000000; }
 
 messagedialog {
   border-bottom-left-radius: 0px;
